--- a/SpaceInvaders.html
+++ b/SpaceInvaders.html
@@ -11,11 +11,12 @@
 
 	</style>
 </head>
-<body onload="startGame()">
+<body onload="game.start()">
 	<div>
 		<canvas id='game'></canvas>
 	</div>
 
+<script src="maps.js"></script>
 <script src="spaceinvaders.js"></script>
 </body>
 </html>
